--- a/paper.Rmd
+++ b/paper.Rmd
@@ -142,6 +142,146 @@ and fluency. All of these principles are defined and discussed
 below in the context of the GRanges class. Where applicable we contrast our 
 design to the existing Bioconductor infrastructure.
 
+## Genomic Relational Algebra
+
+* Arithmetic
+** Unary
+   IRanges has already explored this space and defined its own
+   "algebra", but we could revisit it. bedtools is also inspiring.
+
+   We need to make adjustments to the start, end and width. Extending
+   dplyr, this would just be =mutate()=, e.g.:
+   #+begin_src R
+   mutate(x, start=start+1L)
+   #+end_src
+   And while that could be supported, we typically want to make
+   relative adjustments.
+   
+   One complication is that the start, end and width are mutually
+   dependent. Changing the start, as above, needs to change either
+   the width or the end to preserve integrity. We assume that the
+   user thinks of the range as a pair of endpoints (this is natural
+   in genomics anyway), so setting the start will modify the width
+   but preserve the end. The opposite, preserving the start but not
+   the other endpoint, is =IRanges::shift()=. Maybe we should be more
+   explicit about whether the width or the other endpoint is changed
+   by side effect.
+   
+   Here are some possible verbs for changing the width:
+   * =stretch_start/end= :: Extend the range by 'x' by pulling the
+	start or the end (and leaving the other one anchored),
+   * =squeeze_start/end= :: Opposite of stretch (could just use
+	negative value for stretch, but being explicit seems
+	preferable in many cases),
+
+   Not sure whether =squeeze= is actually useful, as we typically
+   want to stretch a range to consider context, not squeeze it.
+    
+   Or maybe it would be more obvious if we supported the notion of
+   anchoring, similar to grouping. This would require decorating the
+   object. For example,
+   #+begin_src R
+     stretch(anchor_end(x), y)
+   #+end_src
+   This pushes information from the syntax to the object state. While
+   it simplifies the grammar, object behavior is more complex and
+   implicit. But if the code is part of the same chain, it seems
+   intuitive.
+
+   There would be three ways to anchor:
+   * =anchor_start()=
+   * =anchor_end()=
+   * =anchor_center()=
+
+   Anchoring the midpoint would enable symmetric zooming.
+
+   This is basically a deconstruction of =IRanges::resize()=, except
+   =resize()= is absolute. Perhaps =set_width()= could play
+   the role of =resize()=. It is not clear whether we need
+   =set_start()= and =set_end()=.
+    
+   When strand is involved, we will need something like:
+   * =anchor_3p= (start for negative strand)
+   * =anchor_5p= (end for negative strand)
+
+   Anchoring the width would not make sense, because (1) it is not a
+   point that can be intuitively anchored and (2) stretching and
+   squeezing obviously modify the width, so it would not apply to
+   those.
+
+   For width-invariant changes, there is =shift()= from the IRanges
+   API. That is a symmetric operation (positive for right, negative
+   for left). We could introduce:
+   * =shift_left()=
+   * =shift_right()=
+   If we wanted the direction to be explicit.
+
+   Note that with GRanges, strand can modulate direction, and we need
+   to distinguish left/right (chromosomal coordinates) from the
+   direction of transcription:
+   * =shift_upstream()=
+   * =shift_downstream()=
+
+     | Fluent                   | IRanges       | bedtools |
+     |--------------------------+---------------+----------|
+     | stretch(anchor_start())  | -             | slop -r  |
+     | stretch(anchor_end())    | -             | slop -l  |
+     | stretch(anchor_center()) | +()           | slop -b  |
+     | set_width(anchor_*)      | resize(fix=*) | -        |
+     | shift_right()            | shift()       | shift -s |
+     | shift_left()             | -             | -        |
+     | shift_up/downstream()    | -             | -        |
+
+  Note that =resize,GRanges()= and =slop -s= use the strand for
+  direction, i.e, =anchor_3p()= and =anchor_5p()=. Bedtools supports
+  width-relative adjustment with =slop -pct=; we will let the user
+  be explicit, e.g.: =stretch(x, 2*width(x))=.
+  
+  One problem is that can be stretched or shifted out of bounds, or squeezed out of existence.
+  Currently, GenomicRanges will warn the user when a range is pushed
+  out of bounds and suggest calling =trim()=. We should probably
+  throw an error in this case, because it is never a good idea for
+  an object to be in a (semi)-invalid state. The resolution needs
+  to be explicit, as part of the function call. By default,
+  we throw an error. There could be variants of all of these
+  operations with the post fix =_up_to= that imply the trim, 
+  e.g., =stretch_up_to()= or =set_width_up_to()=. Another
+  resolution would be to drop the ranges that would become
+  out of bounds. Those could use the =_or_drop()= postfix.
+  
+  We could also use this anchoring notion to define a new verb
+  =flip()= that generates flanking regions, but that will cause
+  semantic issues with strandedness. Instead, we probably need
+  =flank_left()= and =flank_right()=. With strand, there would be
+  =flank_before()= and =flank_after()=.
+
+** Binary
+   Binary operations between two ranges mostly align with set
+   operations that treat ranges as sets of integers. These are
+   parallel/vectorized operations between two vectors/tables of
+   ranges, so are not to be confused with the aggregating set
+   operations described later.
+
+   Currently, these set operations have the =p= prefix, e.g.,
+   =punion()=. We could make the binary nature more obvious by
+   aliasing them as operators:
+   * =%union%=
+   * =%intersect%=
+   * =%setdiff%=
+
+   There are also operations that relate to the relative positions of
+   two ranges:
+   * =between()=: the range in the gap between the two ranges
+     * To get the separation, just do =width(between(x, y))=
+   * =span()=: a range that spans both ranges (and the gap)
+
+   As a note, to express a binary operation involving the subject of a
+   =mutate()=, =summarize()= or whatever call, we could use the pronoun:
+   #+begin_src R
+   mutate(x, foo = width(. %intersect% other_ranges))
+   #+end_src
+   
+
 ## Cohesion
 
 A function is cohesive if it performs a singular task and does not produce
