add in knitr/ggbio refs

--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,26 @@
-  @Manual{r-core,
+@Article{R-ggbio,
+    title = {ggbio: an R package for extending the grammar of graphics for genomic data},
+    author = {Tengfei Yin and Dianne Cook and Michael Lawrence},
+    journal = {Genome Biology},
+    volume = {13},
+    number = {8},
+    pages = {R77},
+    year = {2012},
+    publisher = {BioMed Central Ltd},
+  }
+
+@Book{R-knitr,
+  title = {Dynamic Documents with {R} and knitr},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2015},
+  edition = {2nd},
+  note = {ISBN 978-1498716963},
+  url = {https://yihui.name/knitr/},
+}
+
+@Manual{r-core,
     title = {R: A Language and Environment for Statistical Computing},
     author = {{R Core Team}},
     organization = {R Foundation for Statistical Computing},
